# Easy_Market

./: CMakeLists.txt  main.c
Libs/Inc/: Customers.h  Manager.h  Order.h  Product.h
Libs/Src/: Customers.c  Manager.c  Order.c  Product.c
